# litePDF

./: CLAUDE.md  Cargo.toml  README.md  build.rs
src/: file_ops.rs  ipc.rs  main.rs  state.rs  window_state.rs
src/frontend/: app.js  index.html  pdf-viewer.js  style.css
